Fix for text and button overlaping on Listview
[Issue] https://github.com/Samsung/TAU/issues/237
[Problem] Text and button overlap in Listview
[Solution] New css styles have been added.

--- a/src/css/profile/wearable/changeable/theme-circle/listview.less
+++ b/src/css/profile/wearable/changeable/theme-circle/listview.less
@@ -194,7 +194,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			flex-direction: column;
+			flex-direction: row;
 			a {
 				display: flex;
 				flex-direction: column;
